<resources>
    <string name="app_name">TrainMan</string>
    <string name="trainman_image_desc">TrainMan image</string>
    <string name="app_title_text">TrainMan</string>
    <string name="login_text">Please Log In</string>
    <string name="login_button_text">Login</string>
    <string name="enter_username_label">Username:</string>
    <string name="enter_username_hint"><font size="12"><i>Enter your username</i></font></string>
    <string name="enter_password_label">Password:</string>
    <string name="enter_password_hint"><font size="12"><i>Enter your password</i></font></string>
    <string name="valid_username">jdoe</string>
    <string name="valid_password">welcome1</string>
    <string name="success_toast">Login Successful!</string>
    <string name="failure_toast">Login Failure!</string>
    <string name="user_logged_in_as_label">Logged in as:</string>
    <string name="date_button_text"><font size="12"><i>Select date</i></font></string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="discard_button_text">Discard</string>
    <string name="done_button_text">Done</string>
    <string name="back_button_text">Back</string>
    <string name="OK_msg_text">OK</string>
    <string name="logoff_button_text">Log Off</string>
    <string name="logoff_msg_text">Logging You Off</string>
    <string name="are_you_sure_msg_text">Are you sure?</string>
    <string name="null_string"> </string>
    <string name="date_picker_title">Select Date</string>
    <string name="show_message">Show Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_title">Alert</string>
    <string name="delete_button_text">Delete</string>
    <string name="not_found_msg_text">No data found.</string>
    <string name="OK_to_continue_msg_text">OK to continue</string>
    <string name="print_button_text">Send to printer</string>
    <string name="email_button_text">Send email</string>
    <string name="choose_one">Choose One</string>
    <string name="address_label">Address</string>
    <string name="street_label">Street</string>
    <string name="city_label">City: </string>
    <string name="state_label">State: </string>
    <string name="zip_label">Zip: </string>
    <string name="one_label">1) </string>
    <string name="two_label">2) </string>
    <string name="note_label">Note:</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="enter_new_customer_button_text">Enter new customer</string>
    <string name="display_customer_list_button_text">Display customer list"</string>
    <string name="camera2_demo_button_text">Camera2 Demo"</string>
    <string name="generate_customers_button_text">Generate Test Customers"</string>
    <string name="customer_list_title">Customer List</string>
    <string name="list_item_customer_name_label">Customer Name:</string>
    <string name="list_item_customer_date_label">Date Registered:</string>
    <string name="new_customer">New Customer</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="customer_list_subtitle_format">%1$d customers</string>
    <string name="customer_name_label">Customer:</string>
    <string name="gender_label">Gender:</string>
    <string name="birthdate_label">Birth Date:</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">Email:</string>
    <string name="customer_take_picture_button_text">Take Picture</string>
    <string name="enter_customer_title">Enter New Customer</string>
    <string name="customer_name_hint"><font size="12"><i>Customer name goes here</i></font></string>
    <string name="gender_select"><font size="12"><i>Select gender</i></font></string>
    <string name="gender_male"><font size="14" weight="normal">Male</font></string>
    <string name="gender_female"><font size="14" weight="normal">Female</font></string>
    <string name="gender_other"><font size="14" weight="normal">Other</font></string>
    <string-array name="gender_list">
        <item>@string/gender_select</item>
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
        <item>@string/gender_other</item>
    </string-array>
    <string name="phone1_hint"><font size="12"><i>Primary phone number goes here</i></font></string>
    <string name="phone2_hint"><font size="12"><i>Secondary phone number goes here</i></font></string>
    <string name="email1_hint"><font size="12"><i>Primary email goes herre</i></font></string>
    <string name="email2_hint"><font size="12"><i>Secondary email goes here</i></font></string>
    <string name="address1_hint"><font size="12"><i>Address part 1 goes here</i></font></string>
    <string name="address2_hint"><font size="12"><i>Address part 2 goes here</i></font></string>
    <string name="city_hint"><font size="12"><i>City goes here</i></font></string>
    <string name="state_hint"><font size="12"><i>State goes here</i></font></string>
    <string name="zip_hint"><font size="12"><i>Zip goes here</i></font></string>
    <string name="note_hint"><font size="12"><i>Note, if any, goes here</i></font></string>
    <string name="customer_main_title">Customer Information</string>
    <string name="customer_menu_title">Customer Menu</string>
    <string name="customer_head_layout">customer_head_layout</string>
    <string name="view_customer_title">View Customer</string>
    <string name="delete_customer_msg_text">Delete Customer</string>
    <string name="view_customer_button_text">View/Edit Customer Details</string>
    <string name="take_customer_picture_button_text">Take customer picture</string>
    <string name="view_customer_sessions_button_text">View Customer\'s Sessions</string>
    <string name="enter_new_session_button_text">Enter new session</string>
    <string name="view_customer_payments_button_text">View Customer Payments</string>
    <string name="delete_customer_sessions_button_text">Delete Customer\'s Sessions</string>
    <string name="take_customer_picture_title">Take Customer Picture</string>
    <string name="picture_button_text">Take Picture</string>
    <string name="customer_picture_desc">Customer picture</string>
    <string name="session_list_title">Customer Session List</string>
    <string name="session_list_session_type_label">Session Type: </string>
    <string name="session_list_session_date_label">Date Entered: </string>
    <string name="session_list_subtitle_format">%1$d sessions</string>
    <string name="view_customer_payments_title">Customer Payments</string>
    <string name="payment_list_payment_amount_label">Amount: </string>
    <string name="payment_list_payment_date_label">Payment Date: </string>
    <string name="payment_list_subtitle_format">%1$d payments</string>
    <string name="session_menu_title">Customer Session Menu</string>
    <string name="session_date_label">Session Date:</string>
    <string name="session_date_button_text">Enter session date</string>
    <string name="session_service_label">Service: </string>
    <string name="session_service_select"><font size="12"><i>Select Service</i></font></string>
    <string name="session_service_1"><font size="14" weight="normal">Standard</font></string>
    <string name="session_service_2"><font size="14" weight="normal">Premium</font></string>
    <string name="session_service_3"><font size="14" weight="normal">Other</font></string>
    <string-array name="session_service_list">
        <item>@string/session_service_select</item>
        <item>@string/session_service_1</item>
        <item>@string/session_service_2</item>
        <item>@string/session_service_3</item>
    </string-array>
    <string name="session_descr_label">Description:</string>
    <string name="session_descr_hint"><font size="12"><i>Enter description</i></font></string>
    <string name="session_sign_label">Signature:</string>
    <string name="session_sign_hint"><font size="12"><i>Sign here</i></font></string>
    <string name="session_completed_label">Completed:</string>
    <string name="session_paid_label">Paid:</string>
    <string name="display_session_list_button_text">Display Sessions</string>
    <string name="view_session_button_text">View/Edit Session Details</string>
    <string name="complete_session_button_text">Complete session</string>
    <string name="sign_session_button_text">Sign session</string>
    <string name="enter_payment_button_text">Enter payment</string>
    <string name="view_payment_button_text">View payment</string>
    <string name="generate_receipt_button_text">Generate receipt</string>
    <string name="print_receipt_button_text">Print receipt</string>
    <string name="email_receipt_button_text">Email receipt</string>
    <string name="enter_new_session_title">Enter New Session</string>
    <string name="view_session_title">View Session</string>
    <string name="session_completed_hint">Completed</string>
    <string name="session_paid_hint">Paid</string>
    <string name="sign_session_title">Sign Session</string>
    <string name="sign_session_label">Sign and confirm session completion</string>
    <string name="sign_session_hint"><font size="12"><i>Sign here</i></font></string>
    <string name="payment_process_payment_title">Process Payment</string>
    <string name="payment_pay_method_label">Payment Method:</string>
    <string name="payment_pay_method_select"><font size="12"><i>Select Payment Method</i></font></string>
    <string name="payment_pay_method_Cash"><font size="14" weight="normal">Cash</font></string>
    <string name="payment_pay_method_CreditCard"><font size="14" weight="normal">Credit Card</font></string>
    <string name="payment_pay_method_PayPal"><font size="14" weight="normal">PayPal</font></string>
    <string-array name="payment_pay_method_list">
        <item>@string/payment_pay_method_select</item>
        <item>@string/payment_pay_method_Cash</item>
        <item>@string/payment_pay_method_CreditCard</item>
        <item>@string/payment_pay_method_PayPal</item>
    </string-array>
    <string name="payment_card_number_label">Card Number:</string>
    <string name="payment_card_number_hint"><font size="12"><i>Card number goes here</i></font></string>
    <string name="payment_card_expire_date_label">Card Expire Date:</string>
    <string name="payment_card_expire_date_hint"><font size="12" weight="normal"><i>Select expiration date</i></font></string>
    <string name="payment_card_security_code_label">Security code:</string>
    <string name="payment_card_security_code_hint"><font size="12"><i>Card security code goes here</i></font></string>
    <string name="payment_pay_date_label">Pay date:</string>
    <string name="payment_pay_date_hint"><font size="12"><i>Select pay date</i></font></string>
    <string name="payment_amount_label">Amount:</string>
    <string name="payment_amount_hint"><font size="12"><i>Payment amount goes here</i></font></string>
    <string name="payment_bill_to_name_label">Billing name:</string>
    <string name="payment_bill_to_name_hint"><font size="12"><i>Bill to name goes here</i></font></string>
    <string name="payment_bill_to_address_label">Billing address:</string>
    <string name="payment_bill_to_address1_hint"><font size="12"><i>Bill to address 1 goes here</i></font></string>
    <string name="payment_bill_to_address2_hint"><font size="12"><i>Bill to address 2 goes here</i></font></string>
    <string name="payment_bill_to_city_label">Billing city:</string>
    <string name="payment_bill_to_city_hint"><font size="12"><i>Bill to city goes here</i></font></string>
    <string name="payment_bill_to_state_label">Billing state:</string>
    <string name="payment_bill_to_state_hint"><font size="12"><i>Bill to state goes here</i></font></string>
</resources>