<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/trainman_launcher_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/trainman_image_desc"
            android:src="@drawable/trainmanimage3"
        />
        <TextView style="@style/app_title_style"
            android:id="@+id/app_title_text"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView style="@style/head1_style"
            android:id="@+id/sigin_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:padding="4dp"
            android:id="@+id/enter_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enter_username_label"
        />

        <EditText style="@style/edittext_style"
            android:id="@+id/enter_username_edittext"
            android:padding="4dp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/edittext_bottom_border"
            android:hint="@string/enter_username_hint"
            android:inputType="text"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:padding="4dp"
            android:id="@+id/enter_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enter_password_label"
        />
        <EditText style="@style/edittext_style"
            android:id="@+id/enter_password_edittext"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/edittext_bottom_border"
            android:inputType="textPassword"
            android:hint="@string/enter_password_hint"
            android:ems="20"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:background="@drawable/button_round"
            android:drawablePadding="4dp"
        />
    </LinearLayout>

</LinearLayout>