<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView style="@style/main_menu_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_title"/>
    </LinearLayout>

    <View
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:layout_width="312dp"
        android:layout_height="1dp"
        android:background="@color/blue700" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/display_customer_list_button"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:text="@string/display_customer_list_button_text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/enter_new_customer_button"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:text="@string/enter_new_customer_button_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/menu_logoff_button"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:text="@string/logoff_button_text"/>
    </LinearLayout>

    <View
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="312dp"
        android:layout_height="1dp"
        android:background="@color/blue700" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/menu_camera2_demo_button"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:text="@string/camera2_demo_button_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/menu_generate_customers_button"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:text="@string/generate_customers_button_text" />
    </LinearLayout>

</LinearLayout>